--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -5,5 +5,6 @@
   "notFoundWallet": "Not Found Wallet, please install math wallet!",
   "addWallet": "Not Found Wallet, please create a wallet!",
   "addLiquidity": "Add Liquidity",
-  "noLiquidity": "No liquidity found. You can provide liquidity by click Add Liquidity button below."
+  "noLiquidity": "No liquidity found. You can provide liquidity by click Add Liquidity button below.",
+  "copySuccess": "Copy Success."
 }
