Globalization for swap module

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,4 +1,40 @@
 {
+  "headerSwap": "Swap",
+  "headerLending": "Lending",
+  "headerAggregator": "Aggregator",
+  "headerGovernance": "Governance",
+  "headerMarket": "Market",
+  "footerHome": "Home",
+  "footerDevelopers": "Developers",
+  "footerNetwork": "Network",
+  "footerCommunity": "Communnity",
+  "footerInfo": "Info",
+
+  "selectAToken": "Select a token",
+  "searchToken": "Search token",
+
+  "price": "Price",
+  "minimumReceived": "Minimum Received",
+  "priceImpact": "Price Impact",
+  "priceImpactDescription": "The difference between the market price and estimated price due to trade size",
+  "liquidityProviderFee": "Liquidity Provider Fee",
+  "liquidityProviderFeeDescription": "A portion of each trade (0.25%) goes to liquidity providers as a protocol incentive",
+  "route": "Route",
+
+  "balance": "Balance",
+  "insufficientBalance": "Insufficient Balance",
+  "insufficientLiquidity": "Insufficient Liquidity",
+  "max": "MAX",
+
+  "confirmSwap": "Confirm Swap",
+  "confirmSwapFrom": "From",
+  "confirmSwapTo": "To",
+  "confirmSwapHint": "Output is estimated. If the price changes by more than 0.5%. your transaction will revert.",
+  "swapTransactionStarted": "Waiting for Confrimation",
+  "swapTransactionSuccess": "Transaction Submitted",
+  "swapTransactionFailed": "Transaction Failed",
+  "viewOnSubscan": "View on Subscan",
+
   "swap": "Swap",
   "pool": "Pool",
   "connectToWallet": "Connect to a wallet",
