--- a/public/locales/zh-CN.json
+++ b/public/locales/zh-CN.json
@@ -1,4 +1,40 @@
 {
+  "headerSwap": "交易",
+  "headerLending": "借贷",
+  "headerAggregator": "聚合",
+  "headerGovernance": "治理",
+  "headerMarket": "市场",
+  "footerHome": "首页",
+  "footerDevelopers": "开发者",
+  "footerNetwork": "网络",
+  "footerCommunity": "社区",
+  "footerInfo": "资讯",
+
+  "selectAToken": "选择代币",
+  "searchToken": "搜索代币",
+
+  "price": "价格",
+  "minimumReceived": "最少接收",
+  "priceImpact": "价格影响",
+  "priceImpactDescription": "市场价与兑换预估价之间的差异",
+  "liquidityProviderFee": "流动性费率",
+  "liquidityProviderFeeDescription": "每笔交易中作为激励付给流动性提供者的部分",
+  "route": "路由",
+
+  "balance": "余额",
+  "insufficientBalance": "余额不足",
+  "insufficientLiquidity": "流动性不足",
+  "max": "全部",
+
+  "confirmSwap": "确认兑换",
+  "confirmSwapFrom": "从",
+  "confirmSwapTo": "至",
+  "confirmSwapHint": "兑换量为预估值。如果价格变动超过0.5%, 您的交易将被取消。",
+  "swapTransactionStarted": "等待确认",
+  "swapTransactionSuccess": "交易已提交",
+  "swapTransactionFailed": "交易失败",
+  "viewOnSubscan": "在Subscan上查看",
+
   "swap": "兑换",
   "pool": "资金池",
   "connectToWallet": "连接钱包",
